submission page update 01

--- a/Submissions.html
+++ b/Submissions.html
@@ -10,16 +10,64 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body>
-<div class="container">
+<body class="bg-dark text-white p-5">
+    <div class="container bg-secondary p-3">
 
-<!-- 
+        <!-- 
 my id 
 name 
 tried,accepted
 
 submitted_problem_id, Title, difficulty-level, result, How-many-people-solved 
  -->
+        <div class="row">
+            <!-- table  -->
+            <div class="col-lg-9">
+                <h3 class="text-center">Submission table</h3>
+                <table class="table table-striped">
+                    <thead class="bg-warning">
+                      <tr>
+                        <th scope="col">Problem_ID</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Difficulty</th>
+                        <th scope="col">Result</th>
+                        <th scope="col">Solved</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td>@mdo</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+            <!-- profile  -->
+            <div class="col-lg-3">
+                <h4>Profile </h4><br>
+                image
+                <br>
+                Name :
+                <br>
+                ID :
+                <br>
+                Tried :
+                <br>
+                Accepted :
+                <br>
+
+            </div>
+        </div>
 
 
 
@@ -44,13 +92,12 @@ submitted_problem_id, Title, difficulty-level, result, How-many-people-solved
 
 
 
-
-</div>
-
+    </div>
 
 
 
-    
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
     </script>
