reforming project structure - v1

--- a/auth/login.html
+++ b/auth/login.html
@@ -60,7 +60,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-lg-9 bg-secondary text-white">
+      <div class="col-lg-9 bg-success text-white p-3">
         <h1>Welcome to Online Judge</h1>
         <br>
         <p>
