--- a/problem/problemDetail.html
+++ b/problem/problemDetail.html
@@ -14,7 +14,7 @@
     <div class="container">
         <br><br>
         <!-- qsn section  -->
-        <div class="container bg-info p-5"> 
+        <div class="container bg-warning p-5"> 
             <h3>
                 Problem_ID : 01 #
                 <br>
@@ -22,9 +22,8 @@
                 <br><br>
                 Find the mean value of the given numbers.
             </h3>
-            <br><br>
-            <h4 class="text-center">Description</h4>
-            <p class="bg-dark p-3">
+          
+            <p class="bg-white text-dark p-3">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse minus culpa accusamus nemo, alias
                 incidunt
                 consequuntur corrupti suscipit cum veritatis laudantium labore. Inventore dolore eius pariatur
@@ -39,7 +38,7 @@
             </p>
         </div>
         <!-- qsn section  closed  -->
-<div class="container p-5">
+<div class="container bg-warning p-3">
     <div class="row">
         <div class="col-lg-6">
             <h4>Sample Inputs</h4>
@@ -55,17 +54,12 @@
 </div>
 
 
-
-
-
-
-
 <!-- submit section  -->
-<div class="container bg-warning p-5">
+<div class="container bg-success p-5">
     <div class="row">
         <div class="col-lg-10">
-            <h5>Write your code here</h5>
-            <textarea class="form-control" id="" rows="3"></textarea>
+            <h3>Write your code here</h3>
+            <textarea class="form-control" id="" rows="12"></textarea>
         </div>
         <div class="col-lg-2">
             <h4>Language</h4>
@@ -82,7 +76,7 @@
                 <option>C#</option>
               </select>
             <br>
-            <button class="btn btn-success" type="submit">Submit code</button>
+            <button class="btn btn-danger" type="submit">Submit code</button>
         </div>
         </div>
 </div>
