--- a/result/rankList.html
+++ b/result/rankList.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submissions</title>
+    <title>Ranking</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark text-white p-5">
-    <div class="container bg-secondary p-3">
+<body class="bg-white text-dark p-5">
+    <div class="container bg-white p-3">
 
         <!-- 
 my id 
@@ -23,70 +23,42 @@ submitted_problem_id, Title, difficulty-level, result, How-many-people-solved
         <div class="row">
             <!-- table  -->
             <div class="col-lg-9">
-                <h3 class="text-center">Submission table</h3>
+                <h3 class="text-center text-warning">Ranking</h3>
                 <table class="table table-striped">
                     <thead class="bg-warning">
-                      <tr>
-                        <th scope="col">Problem_ID</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Difficulty</th>
-                        <th scope="col">Result</th>
-                        <th scope="col">Solved</th>
-                      </tr>
+                        <tr>
+                            <th scope="col">Position</th>
+                            <th scope="col">User_Name</th>
+                            <th scope="col">Used_ID</th>
+                            <th scope="col">Batch</th>
+                            <th scope="col">Solved</th>
+                        </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>@mdo</td>
-                      </tr>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Tanvir</td>
+                            <td>18043</td>
+                            <td>Green</td>
+                            <td>25</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Tanvir</td>
+                            <td>18043</td>
+                            <td>Green</td>
+                            <td>25</td>
+                        </tr>
                     </tbody>
-                  </table>
+                </table>
             </div>
-            <!-- profile  -->
-            <div class="col-lg-3">
-                <h4>Profile </h4><br>
-                image
-                <br>
-                Name :
-                <br>
-                ID :
-                <br>
-                Tried :
-                <br>
-                Accepted :
-                <br>
+            <div class="col-lg-3 p-5">
+                <h1 class="text-success">Success</h1>
+            </div>
 
-            </div>
+
+
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
