update front end

--- a/result/rankList.html
+++ b/result/rankList.html
@@ -29,7 +29,7 @@ submitted_problem_id, Title, difficulty-level, result, How-many-people-solved
                         <tr>
                             <th scope="col">Position</th>
                             <th scope="col">User_Name</th>
-                            <th scope="col">Used_ID</th>
+                            <th scope="col">User_ID</th>
                             <th scope="col">Batch</th>
                             <th scope="col">Solved</th>
                         </tr>
