forget and reset page

--- a/master/header.html
+++ b/master/header.html
@@ -26,8 +26,6 @@
             <a class="nav-link" href="/problem/problemList.html">ProblemList</a>
           </li>
 
-          
-
           <li class="nav-item">
             <a class="nav-link" href="/result/rankList.html">Rank</a>
           </li>
@@ -43,42 +41,30 @@
             </form>
           </li>
 
-<!-- 
+          <!-- 
           <li class="nav-item">
             <a class="nav-link" href="#">Login</a>
           </li> -->
 
           <div class="dropdown p-1">
-            <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Tanvir
+            <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Tanvir
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="#">Profile</a>
               <a class="dropdown-item" href="#">My Submissions</a>
               <a class="dropdown-item" href="#">Logout</a>
-              
+
             </div>
           </div>
-
 
         </ul>
       </div>
     </nav>
     <br>
-
   </header>
   <!-- navbar closed  -->
-
-
-
-
-
-
-
-  </div>
-  <!-- container close -->
-
-
 
 
 
