--- a/problem/insertProblem.html
+++ b/problem/insertProblem.html
@@ -14,7 +14,7 @@
     <div class="container">
         <br><br>
         <!-- qsn section  -->
-        <div class="container bg-warning p-5"> 
+        <div class="container bg-warning p-5">
             <h3>
                 Problem_ID : 01 #
                 <br>
@@ -22,7 +22,7 @@
                 <br><br>
                 Find the mean value of the given numbers.
             </h3>
-          
+
             <p class="bg-white text-dark p-3">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse minus culpa accusamus nemo, alias
                 incidunt
@@ -38,64 +38,20 @@
             </p>
         </div>
         <!-- qsn section  closed  -->
-<div class="container bg-warning p-3">
-    <div class="row">
-        <div class="col-lg-6">
-            <h4>Sample Inputs</h4>
-            <br>
-            <textarea class="form-control" id="" rows="3"></textarea>
+        <div class="container bg-warning p-3">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4>Sample Inputs</h4>
+                    <br>
+                    <textarea class="form-control" id="" rows="3"></textarea>
+                </div>
+                <div class="col-lg-6">
+                    <h4>Outputs</h4>
+                    <br>
+                    <textarea class="form-control" id="" rows="3"></textarea>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-6">
-            <h4>Outputs</h4>
-            <br>
-            <textarea class="form-control" id="" rows="3"></textarea>
-        </div>
-    </div>
-</div>
-
-
-<!-- submit section  -->
-<div class="container bg-success p-5">
-    <div class="row">
-        <div class="col-lg-10">
-            <h3>Write your code here</h3>
-            <textarea class="form-control" id="" rows="12"></textarea>
-        </div>
-        <div class="col-lg-2">
-            <h4>Language</h4>
-            <select class="form-control" id="">
-                <option>Java 8</option>
-                <option>C</option>
-                <option>C++</option>
-                <option>Python 3</option>
-                <option>Javascript</option>
-                <option>PHP</option>
-                <option>Rust</option>
-                <option>Perl</option>
-                <option>Ruby</option>
-                <option>C#</option>
-              </select>
-            <br>
-            <button class="btn btn-danger" type="submit">Submit code</button>
-        </div>
-        </div>
-</div>
-
-
-
-
-
-
-        <!-- ID 
-Level 
-Title 
-Description S
-Input 
-Output
-.. 
-language 
-Code area 
-submit-button  -->
 
 
 
@@ -111,6 +67,8 @@ submit-button  -->
 
 
 
+        <br>
+        <button class="btn btn-success" type="submit">Set problem</button>
 
 
 
