--- a/auth/registration.html
+++ b/auth/registration.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>online judge</title>
+  <title>Registration</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -22,10 +22,10 @@
             <div class="col-lg-6 bg-info text-white rounded">
                 <form action="registration" method="POST">
                 <br>
-                <h3 class="text-center">Register as Customer</h3>
+                <h3 class="text-center">User registration</h3>
                 <br>
             
-                <input class="form-control mr-sm-2" type="text" placeholder="Customer name" name="user">
+                <input class="form-control mr-sm-2" type="text" placeholder="user name" name="user">
                 <br>
                 <input class="form-control mr-sm-2" type="email" placeholder="email" name="email">
                 <br>
