user profile front

--- a/master/header.html
+++ b/master/header.html
@@ -27,12 +27,12 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/result/rankList.html">Rank</a>
+            <a class="nav-link" href="/record/rankList.html">Rank</a>
           </li>
 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Contest</a>
-          </li>
+          </li> -->
 
           <li class="nav-item nav-right">
             <form class="form-inline" action="/search">
@@ -52,8 +52,8 @@
               Tanvir
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Profile</a>
-              <a class="dropdown-item" href="#">My Submissions</a>
+              <a class="dropdown-item" href="/record/userProfile.html">Profile</a>
+              <a class="dropdown-item" href="/record/resultList.html">My Submissions</a>
               <a class="dropdown-item" href="#">Logout</a>
 
             </div>
