--- a/problem/problemList.html
+++ b/problem/problemList.html
@@ -14,9 +14,9 @@
     <div class="container bg-white p-3">
 
         
-                <h3 class="text-center text-warning">Problem list</h3>
+                <h3 class="text-center text-danger">Problem list</h3>
                 <table class="table table-striped">
-                    <thead class="bg-warning">
+                    <thead class="bg-danger text-white">
                         <tr>
                             <th scope="col">Problem ID</th>
                             <th scope="col">Title</th>
