--- a/record/rankList.html
+++ b/record/rankList.html
@@ -23,9 +23,9 @@ submitted_problem_id, Title, difficulty-level, result, How-many-people-solved
         <div class="row">
             <!-- table  -->
             <div class="col-lg-9">
-                <h3 class="text-center text-warning">Ranking</h3>
+                <h3 class="text-center text-success">Ranking</h3>
                 <table class="table table-striped">
-                    <thead class="bg-warning">
+                    <thead class="bg-success">
                         <tr>
                             <th scope="col">Position</th>
                             <th scope="col">User_Name</th>
@@ -53,7 +53,7 @@ submitted_problem_id, Title, difficulty-level, result, How-many-people-solved
                 </table>
             </div>
             <div class="col-lg-3 p-5">
-                <h1 class="text-success">Success</h1>
+                <h1 class="text-warning">Keep up</h1>
             </div>
 
 
