--- a/record/resultList.html
+++ b/record/resultList.html
@@ -13,22 +13,17 @@
 <body class="bg-white text-dark p-5">
   <div class="container bg-white p-3">
 
-    <!-- 
-my id 
-name 
-tried,accepted
 
-submitted_problem_id, Title, difficulty-level, result, How-many-people-solved 
- -->
     <div class="row">
       <!-- table  -->
       <div class="col-lg-9">
-        <h3 class="text-center text-warning">Submission list</h3>
+        <h3 class="text-center text-warning">Submission result list</h3>
         <table class="table table-striped">
           <thead class="bg-warning">
             <tr>
               <th scope="col">Problem_ID</th>
               <th scope="col">Title</th>
+              <th scope="col">Category</th>
               <th scope="col">Difficulty</th>
               <th scope="col">Result</th>
               <th scope="col">Solved</th>
@@ -38,6 +33,7 @@ submitted_problem_id, Title, difficulty-level, result, How-many-people-solved
             <tr>
               <th scope="row">1</th>
               <td>Summation</td>
+              <td>Math</td>
               <td>Easy</td>
               <td>Success</td>
               <td>25</td>
@@ -45,6 +41,7 @@ submitted_problem_id, Title, difficulty-level, result, How-many-people-solved
             <tr>
               <th scope="row">2</th>
               <td>Division</td>
+              <td>Math</td>
               <td>Medium</td>
               <td>Success</td>
               <td>5</td>
