--- a/auth/forgetPass.html
+++ b/auth/forgetPass.html
@@ -21,7 +21,7 @@
         <div class="row p-5">
             <div class="col-lg-3"></div>
             <div class="col-lg-6 bg-info text-white rounded">
-                <form action="registration" method="POST">
+                <form action="sendEmail" method="POST">
                     <br>
                     <h3 class="text-center">Password reset link will be sent to your email</h3>
                     <br>
