--- a/auth/login.html
+++ b/auth/login.html
@@ -11,50 +11,11 @@
 </head>
 
 <body class="bg-dark">
-  <header>
-    <!-- Nav tabs -->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <div class="container">
-        <!-- Brand -->
-        <a class="navbar-brand" href="#">Online Judge</a>
-        <!-- Links -->
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Problems</a>
-          </li>
+  
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contest</a>
-          </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">Submissions</a>
-          </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">Rank</a>
-          </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">Profie</a>
-          </li>
-
-          <li class="nav-item nav-right">
-            <form class="form-inline" action="/action_page.php">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <br>
-
-  </header>
-  <!-- navbar closed  -->
 
 
   <div class="container">
@@ -74,6 +35,7 @@
       </div>
       <!-- welcome closed  -->
       <div class="col-lg-3 bg-warning text-white">
+        <form action="auth" method="POST">
         <br>
         <h4 class="text-center">Login here</h4>
         <br>
@@ -82,10 +44,11 @@
         <input class="form-control mr-sm-2" type="password" placeholder="Password">
         <br>
         <button class="btn btn-success" type="submit">Login</button>
-        <button class="btn btn-primary" type="submit">Create new account</button>
+        <a class="text-primary btn btn-warning btn-sm" href="/auth/registration.html">Create account</a>
         <br><br>
-        <a class="nav-link text-danger" href="#">Forgot password !</a>
+        <a class="nav-link text-danger" href="/auth/forgetPass.html">Forgot password !</a>
         <br><br>
+        </form>
       </div>
       <!-- login closed  -->
     </div>
