--- a/auth/resetPass.html
+++ b/auth/resetPass.html
@@ -28,7 +28,7 @@
         <div class="row p-5">
             <div class="col-lg-3"></div>
             <div class="col-lg-6 bg-info text-white rounded">
-                <form action="registration" method="POST">
+                <form action="changePass" method="POST">
                 <br>
                 <h3 class="text-center">Reset your password</h3>
                 <br>
