--- a/master/header.html
+++ b/master/header.html
@@ -54,7 +54,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="/record/userProfile.html">Profile</a>
               <a class="dropdown-item" href="/record/resultList.html">My Submissions</a>
-              <a class="dropdown-item" href="#">Logout</a>
+              <a class="dropdown-item" href="/auth/login.html">Logout</a>
 
             </div>
           </div>
